--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-DB='mongodb+srv://Pepe:Pantano2020@cluster0.ex0p4.mongodb.net/myFirstDatabase?retryWrites=true&w=majority'
+DB='mongodb+srv://Pepe:Pantano2022@cluster0.2gyod.mongodb.net/myFirstDatabase?retryWrites=true&w=majority'
