--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "iconify": "^1.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-fetch-hook": "^1.8.5",
     "react-file-base64": "^1.0.3",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
