--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,15 @@
   "proxy": "http://localhost:5500",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "@iconify/icons-mdi": "^1.2.1",
     "@iconify/react": "^3.1.4",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/pickers": "^3.3.10",
     "@mui/icons-material": "^5.5.0",
+    "@mui/lab": "^5.0.0-alpha.72",
     "@mui/material": "^5.4.3",
     "@mui/styles": "^5.4.2",
     "@reduxjs/toolkit": "^1.8.0",
@@ -16,14 +20,17 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
+    "date-fns": "^2.28.0",
     "dotenv": "^16.0.0",
     "framer-motion": "^6.2.8",
     "iconify": "^1.4.0",
     "react": "^17.0.2",
+    "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-fetch-hook": "^1.8.5",
     "react-file-base64": "^1.0.3",
     "react-icons": "^4.3.1",
+    "react-moment": "^1.1.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
