--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "proxy": "http://localhost:5500",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^1.9.0",
     "@date-io/date-fns": "^1.3.13",
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
