--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "@mui/icons-material": "^5.5.0",
     "@mui/lab": "^5.0.0-alpha.72",
     "@mui/material": "^5.4.3",
-    "@mui/styles": "^5.4.2",
+    "@mui/styles": "^5.5.0",
     "@reduxjs/toolkit": "^1.8.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
@@ -33,6 +33,7 @@
     "react-icons": "^4.3.1",
     "react-moment": "^1.1.1",
     "react-redux": "^7.2.6",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
